--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1479,6 +1479,51 @@ input:-webkit-autofill:focus {
     text-align: center;
 }
 
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.spinner {
+    width: 16px;
+    height: 16px;
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    border-top: 2px solid #3498db;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.hidden {
+    display: none;
+}
+
+.image-container {
+    margin-left: 220px; /* Отступ слева */
+    width: 90px; /* Ширина контейнера */
+    height: 90px; /* Высота контейнера */
+    display: flex; /* Центрирование содержимого */
+    justify-content: center; /* Горизонтальное центрирование */
+    align-items: center; /* Вертикальное центрирование */
+}
+
+/* Опционально: Стили для самого SVG */
+.image-container svg {
+    width: 100%; /* SVG займет всю ширину контейнера */
+    height: 100%; /* SVG займет всю высоту контейнера */
+}
 
 
 
