project configuration refactored
Switched old icons to another svg's, rejected debugbar, .env.example refactored, some code refactored, added images to git, refactored code into OrderController (bug with commas in total price), refactored code in update methods for cigarette form and liquid form (rejected require rule from validation), added styles to error messages for liquid-edit form

--- a/resources/css/basket.css
+++ b/resources/css/basket.css
@@ -209,8 +209,7 @@ td{
     align-items: center;
     gap: 5px;
     cursor: pointer;
-    background: transparent;
-    border: none;
+    background-color: #ffcece;  /* Красный фон */
 }
 
 .cart-delete__basket svg {
